--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -4,6 +4,18 @@ What are the benefits of writing functions recursively? What are the drawbacks?
 
 # Answer
 
+Some benefits are:
+
+- Recursive functions can be very concise
+- They simplify more complex problems by breaking the complexity down
+- Ideal for recursive structures (e.g., linked lists, graphs, trees)
+- Solving problems that can be divided into similar sub-problems
+
+Some of the drawbacks are:
+
+- Can be inefficient and consume space on the call stack
+- Risk of stack overflow if not handled properly
+- Recursive solutions can sometimes be confusing
 
 # Teacher Feedback
 
