--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -4,6 +4,7 @@ What is a recursive function? What are "cases" that exist in recursive functions
 
 # Answer
 
+A recursive function is a function that invokes itself inside of the function definition. The two cases in a recursive function are the base case and the recursive function.
 
 # Teacher Feedback
 
