--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -4,6 +4,7 @@ What type of problems are best solved using recursion?
 
 # Answer
 
+Big problems that can broken down into the simplest problem. Also problems that need to find deeply nested data.
 
 # Teacher Feedback
 
