--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -7,5 +7,5 @@ What type of problems are best solved using recursion?
 Big problems that can broken down into the simplest problem. Also problems that need to find deeply nested data.
 
 # Teacher Feedback
-
-X/3 Points
+You're on the right track! However, to make it more precise, you could say that problems are best solved using recursion when they can be divided into smaller, similar subproblems.
+2/3 Points
