--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -18,5 +18,5 @@ Some of the drawbacks are:
 - Recursive solutions can sometimes be confusing
 
 # Teacher Feedback
-
-X/3 Points
+Great!
+3/3 Points
